--- a/template/table.html
+++ b/template/table.html
@@ -64,7 +64,7 @@
 
       <a href="#" class="btn btn-primary" role="button" title="Create" >Create</a><hr>
 
-      <table class="table table-striped table-bordered">
+      <table class="table table-hover table-bordered">
         <thead>
           <tr>
             <th>Company</th>
