--- a/template/table.html
+++ b/template/table.html
@@ -79,8 +79,8 @@
             <td>Maria Anders</td>
             <td>Germany</td>
             <td>
-              <a href="#" class="btn btn-success btn-sm" role="button" title="Edit" >Edit</a>
-              <a href="#" class="btn btn-danger btn-sm" role="button" title="Delete" >Delete</a>
+              <a href="#" class="btn btn-success btn-sm" role="button" title="Edit" ><span class="glyphicon glyphicon-pencil"></span></a>
+			        <button type="submit" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>
             </td>
           </tr>
           <tr>
@@ -88,8 +88,8 @@
             <td>Francisco Chang</td>
             <td>Mexico</td>
             <td>
-              <a href="#" class="btn btn-success btn-sm" role="button" title="Edit" >Edit</a>
-              <a href="#" class="btn btn-danger btn-sm" role="button" title="Delete" >Delete</a>
+              <a href="#" class="btn btn-success btn-sm" role="button" title="Edit" ><span class="glyphicon glyphicon-pencil"></span></a>
+			        <button type="submit" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>
             </td>
           </tr>
           <tr>
@@ -97,8 +97,8 @@
             <td>Roland Mendel</td>
             <td>Austria</td>
             <td>
-              <a href="#" class="btn btn-success btn-sm" role="button" title="Edit" >Edit</a>
-              <a href="#" class="btn btn-danger btn-sm" role="button" title="Delete" >Delete</a>
+              <a href="#" class="btn btn-success btn-sm" role="button" title="Edit" ><span class="glyphicon glyphicon-pencil"></span></a>
+			        <button type="submit" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>
             </td>
           </tr>
         </tbody>
